--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
       <section class="py-8">
         <div class="grid grid-cols-4 gap-4 w-9/12 mx-auto">
           <div class="border-solid border-2 border-gray-200 bg-black pb-4">
-            <img class="bg-cover" src="images/player-1.jpg" alt="" srcset="" />
+            <img
+              class="object-fill h-36 w-96"
+              src="images/player-1.jpg"
+              alt=""
+              srcset=""
+            />
             <h1 id="player-jesus" class="text-center text-white font-bold">
               Gabriel Jesus
             </h1>
@@ -37,7 +42,12 @@
             </button>
           </div>
           <div class="border-solid border-2 border-gray-200 bg-black pb-4">
-            <img class="bg-cover" src="images/player-1.jpg" alt="" srcset="" />
+            <img
+              class="object-fill h-36 w-96"
+              src="images/player2.jpg"
+              alt=""
+              srcset=""
+            />
             <h1 id="player-Martinelli" class="text-center text-white font-bold">
               Gabriel Martinelli
             </h1>
@@ -50,7 +60,12 @@
             </button>
           </div>
           <div class="border-solid border-2 border-gray-200 bg-black pb-4">
-            <img class="bg-cover" src="images/player-1.jpg" alt="" srcset="" />
+            <img
+              class="object-fill h-36 w-96"
+              src="images/player3.jpg"
+              alt=""
+              srcset=""
+            />
             <h1 id="player-White" class="text-center text-white font-bold">
               Ben White
             </h1>
@@ -73,7 +88,12 @@
         </div>
         <div class="grid grid-cols-4 gap-4 w-9/12 mx-auto py-8">
           <div class="border-solid border-2 border-gray-200 bg-black pb-4">
-            <img class="bg-cover" src="images/player-1.jpg" alt="" srcset="" />
+            <img
+              class="object-fill h-36 w-96"
+              src="images/player4.jpg"
+              alt=""
+              srcset=""
+            />
             <h1 id="player-saka" class="text-center text-white font-bold">
               Bukayo Saka
             </h1>
@@ -86,7 +106,12 @@
             </button>
           </div>
           <div class="border-solid border-2 border-gray-200 bg-black pb-4">
-            <img class="bg-cover" src="images/player-1.jpg" alt="" srcset="" />
+            <img
+              class="object-fill h-36 w-96"
+              src="images/player5.jpg"
+              alt=""
+              srcset=""
+            />
             <h1 id="player-smith" class="text-center text-white font-bold">
               Smith Rowe
             </h1>
@@ -99,7 +124,12 @@
             </button>
           </div>
           <div class="border-solid border-2 border-gray-200 bg-black pb-4">
-            <img class="bg-cover" src="images/player-1.jpg" alt="" srcset="" />
+            <img
+              class="object-fill h-36 w-96"
+              src="images/player6.jpg"
+              alt=""
+              srcset=""
+            />
             <h1 id="player-martin" class="text-center text-white font-bold">
               Martin Odegaard
             </h1>
