--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
           Select Your Best Arsenal Player
         </h1>
         <p class="text-center text-white">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod rem
-          sunt tenetur necessitatibus error, facilis tempore repellat provident
-          rerum? Dolor! Lorem, ipsum dolor sit amet consectetur adipisicing
-          elit. Quod rem sunt tenetur necessitatibus error, facilis tempore
-          repellat provident rerum? Dolor!
+          As a club we recognise our operations have an impact on the local,
+          national and global environment and as a consequence are taking steps
+          to achieve continual environmental improvements As a club we recognise
+          our operations have an impact on the local, national and global
+          environment and as a consequence are taking steps to achieve continual
+          environmental improvements
         </p>
       </header>
       <section class="py-8">
