paragraph size edite

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="text-center font-bold text-4xl text-orange-400 pt-8">
           Select Your Best Arsenal Player
         </h1>
-        <p class="text-center text-white">
+        <p class="text-center text-white w-9/12 mx-auto">
           As a club we recognise our operations have an impact on the local,
           national and global environment and as a consequence are taking steps
           to achieve continual environmental improvements As a club we recognise
